Homarr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: homarr-service
  namespace: homarr
spec:
  selector:
    app: homarr
  ports:
    - protocol: TCP
      port: 7575
      targetPort: 7575
